refactor: ajustes no pom.xml